# ams-chatbot

./: .dockerignore  .env.example  .flaskenv  .gitignore  Agent.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
application/: __init__.py  config.py
application/api/: __init__.py  routes.py
application/database/: chromadb.py  create_database.py  database.py  postgres.py
application/mcp/: client.py  server.py
application/middlewares/: auth.py
application/model/: client.py  llm.py  prompt_manager.py
application/retriaval/: rag.py
application/storage/: create_database.py
chroma/: chroma.sqlite3
data/: flights.json
mcp_server/: server.py
tests/: conftest.py  test_api.py
