[project]
name = "ams-chatbot"
version = "0.1.0"
description = "A Flask-based microservice for the Airline Management System chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.51.0",
    "chromadb>=1.0.9",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "google-genai>=1.15.0",
    "google-generativeai>=0.8.5",
    "jq>=1.8.0",
    "jwt>=1.3.1",
    "langchain-community>=0.3.24",
    "langchain-google-genai>=2.0.10",
    "mcp[cli]>=1.7.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "gunicorn>=23.0.0",
]
